[gd_scene load_steps=11 format=2]

[ext_resource path="res://WndWin.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/wnd_main_background2.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/wnd_win.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/btn_home.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/btn_play.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/btn_menu.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/stars_zero.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/RaggMoppNF.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]

size = 96
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="WndWin" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
numStars = 3
score = 788
bestScore = 0

[node name="background" type="Sprite" parent="." index="0"]

modulate = Color( 0.352941, 0.352941, 0.352941, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility" ]

[node name="wnd" type="Sprite" parent="." index="1"]

texture = ExtResource( 3 )

[node name="btnHome" type="TextureButton" parent="wnd" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -432.0
margin_top = 432.0
margin_right = -261.0
margin_bottom = 604.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="btnPlay" type="TextureButton" parent="wnd" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -96.0
margin_top = 432.0
margin_right = 75.0
margin_bottom = 604.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="btnMenu" type="TextureButton" parent="wnd" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 240.0
margin_top = 432.0
margin_right = 411.0
margin_bottom = 604.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="stars" type="Sprite" parent="wnd" index="3"]

position = Vector2( -16, -208 )
texture = ExtResource( 7 )

[node name="score" type="Label" parent="wnd" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -96.0
margin_right = 83.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0352941, 0.498039, 0.611765, 1 )
text = "5431"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="bestScore" type="Label" parent="wnd" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -64.0
margin_top = 192.0
margin_right = 59.0
margin_bottom = 266.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0352941, 0.498039, 0.611765, 1 )
text = "5431"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "custom_colors", "custom_fonts", "custom_styles" ]

[connection signal="pressed" from="wnd/btnHome" to="." method="_on_btnHome_pressed"]

[connection signal="pressed" from="wnd/btnPlay" to="." method="_on_btnPlay_pressed"]

[connection signal="pressed" from="wnd/btnMenu" to="." method="_on_btnMenu_pressed"]


